syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";

package dev.multy.resources;

message CreateRouteTableRequest {
  RouteTableArgs resource = 1;
}

message ReadRouteTableRequest {
  string resource_id = 1;
}

message UpdateRouteTableRequest {
  string resource_id = 1;
  RouteTableArgs resource = 2;
}

message DeleteRouteTableRequest {
  string resource_id = 1;
}

enum RouteDestination {
  UNKNOWN_DESTINATION = 0;
  INTERNET = 1;
}

message Route {
  string cidr_block = 1;
  RouteDestination destination = 2;
}

message RouteTableArgs {
  common.ChildResourceCommonArgs common_parameters = 1;
  string name = 2;
  string virtual_network_id = 3;
  repeated Route routes = 4;
}

message RouteTableResource {
  common.CommonChildResourceParameters common_parameters = 1;
  string name = 2;
  string virtual_network_id = 3;
  repeated Route routes = 4;
}
